--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
         </div>
 
         <div class="home-img">
-            <img src="Images/main.jpg" alt="">
+            <!-- <img src="Images/main.jpg" alt=""> -->
+            <img src="Images/down.jpeg" alt="">
         </div>
 
     </section>
@@ -166,7 +167,7 @@
 
             <div class="wrapper">
                 <div class="testimonial-item">
-                    <img src="" alt="">
+                    <img src="Images/downl.jpeg" alt="">
                     <h2>Person1</h2>
                     <div class="rating"><i class='bx bxs-star' id="star" ></i>
                         <i class='bx bxs-star' id="star"></i>
@@ -183,7 +184,7 @@
 
 
                 <div class="testimonial-item">
-                    <img src="" alt="">
+                    <img src="Images/images.jpeg" alt="">
                     <h2>Person2</h2>
                     <div class="rating">
                         <i class='bx bxs-star' id="star"></i>
@@ -199,7 +200,7 @@
                 </div>
 
                 <div class="testimonial-item">
-                    <img  src="Images/" alt="">
+                    <img  src="Images/download.jpeg" alt="">
                     <h2>Person3</h2>
                     <div class="rating">
                         <i class='bx bxs-star' id="star"></i>
